--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,8 @@
 }
 
 #map {
-  height: 100%;
+  height: 100vh;
 }
-/* Optional: Makes the sample page fill the window. */
 html, body {
   height: 100%;
   margin: 0;
